# docs/swagger.yaml
@@ -232,11 +232,6 @@ components:
         checkoutUrl:
           type: string
       type: object
-    dto.DormIDForOwnershipProofRequestBody:
-      properties:
-        dormId:
-          type: string
-      type: object
     dto.DormRequestBody:
       properties:
         address:
@@ -318,21 +313,6 @@ components:
         adminId:
           type: string
         dormId:
-          type: string
-        status:
-          type: string
-          x-enum-varnames:
-          - Pending
-          - Approved
-          - Rejected
-      type: object
-    dto.OwnershipProofWithFileResponseBody:
-      properties:
-        adminId:
-          type: string
-        dormId:
-          type: string
-        expires:
           type: string
         status:
           $ref: '#/components/schemas/domain.OwnershipProofStatus'
@@ -446,11 +426,6 @@ components:
       properties:
         data:
           $ref: '#/components/schemas/dto.OwnershipProofResponseBody'
-      type: object
-    dto.SuccessResponse-dto_OwnershipProofWithFileResponseBody:
-      properties:
-        data:
-          $ref: '#/components/schemas/dto.OwnershipProofWithFileResponseBody'
       type: object
     dto.SuccessResponse-dto_TokenResponseBody:
       properties:
@@ -1315,16 +1290,16 @@ paths:
       summary: Get my unpaid orders by ID
       tags:
       - order
-  /ownership:
+  /ownership/{id}:
     delete:
       description: Delete an ownership proof file
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/dto.DormIDForOwnershipProofRequestBody'
-        description: Dorm ID
+      parameters:
+      - description: DormID
+        in: path
+        name: id
         required: true
+        schema:
+          type: string
       responses:
         "204":
           description: Ownership proof successfully deleted
@@ -1333,23 +1308,28 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Bad Request
+          description: Incorrect UUID format
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/dto.ErrorResponse'
+          description: Ownership file not found
         "500":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Internal Server Error
+          description: Failed to delete Ownership file
       security:
       - Bearer: []
       summary: Delete ownership proof
       tags:
       - ownership
-  /ownership/{id}:
     get:
       description: Retrieve ownership proof for a specific dorm
       parameters:
-      - description: Dorm ID (UUID format)
+      - description: DormID
         in: path
         name: id
         required: true
@@ -1360,41 +1340,41 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/dto.SuccessResponse-dto_OwnershipProofWithFileResponseBody'
+                $ref: '#/components/schemas/dto.SuccessResponse-dto_OwnershipProofResponseBody'
           description: Ownership proof retrieved successfully
         "400":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Invalid UUID format
-        "401":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Unauthorized request
+          description: Incorrect UUID format
         "404":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Ownership proof not found
+          description: Ownership file not found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/dto.ErrorResponse'
+          description: Internal server error
       security:
       - Bearer: []
       summary: Get ownership proof by Dorm ID
       tags:
       - ownership
-  /ownership/approve:
+  /ownership/{id}/approve:
     post:
       description: Approve a submitted ownership proof for a dorm
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/dto.DormIDForOwnershipProofRequestBody'
-        description: Dorm ID
+      parameters:
+      - description: DormID
+        in: path
+        name: id
         required: true
+        schema:
+          type: string
       responses:
         "200":
           content:
@@ -1407,13 +1387,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Invalid request body
-        "401":
+          description: Incorrect UUID format
+        "404":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Unauthorized request
+          description: Ownership file not found
         "500":
           content:
             application/json:
@@ -1425,48 +1405,16 @@ paths:
       summary: Approve ownership proof
       tags:
       - ownership
-  /ownership/create:
-    post:
-      description: Upload a new file as ownership proof for a dorm
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: string
-        description: Dorm ID (UUID format)
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/dto.SuccessResponse-dto_OwnershipProofWithFileResponseBody'
-          description: Ownership proof created
-        "400":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Bad Request
-        "500":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Internal Server Error
-      summary: Upload new ownership proof
-      tags:
-      - ownership
-  /ownership/reject:
+  /ownership/{id}/reject:
     post:
       description: Reject a submitted ownership proof for a dorm
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/dto.DormIDForOwnershipProofRequestBody'
-        description: Dorm ID
+      parameters:
+      - description: DormID
+        in: path
+        name: id
         required: true
+        schema:
+          type: string
       responses:
         "200":
           content:
@@ -1479,13 +1427,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Invalid request body
-        "401":
+          description: Incorrect UUID format
+        "404":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Unauthorized request
+          description: Ownership file not found
         "500":
           content:
             application/json:
@@ -1497,38 +1445,51 @@ paths:
       summary: Reject ownership proof
       tags:
       - ownership
-  /ownership/update:
+  /ownership/{id}/upload:
     post:
-      description: Replace an existing ownership proof file
+      description: Upload a new file as ownership proof for a dorm
+      parameters:
+      - description: DormID
+        in: path
+        name: id
+        required: true
+        schema:
+          type: string
       requestBody:
         content:
           multipart/form-data:
             schema:
-              type: string
-        description: Dorm ID (UUID format)
+              type: file
+        description: file
         required: true
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/dto.SuccessResponse-dto_OwnershipProofWithFileResponseBody'
-          description: Ownership proof updated
+                $ref: '#/components/schemas/dto.SuccessResponse-dto_OwnershipProofResponseBody'
+          description: Ownership proof created
         "400":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Bad Request
+          description: Incorrect UUID format
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/dto.ErrorResponse'
+          description: Ownershop proof not found
         "500":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/dto.ErrorResponse'
-          description: Internal Server Error
+          description: Server failed to upload file
       security:
       - Bearer: []
-      summary: Update ownership proof
+      summary: Upload new ownership proof
       tags:
       - ownership
   /transaction:
